build/log/idf_py_stdout_output_25933
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/bootloader/esp-idf/esptool_py && /home/afzal-khan/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/afzal-khan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x10000 bootloader 0x0 /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/bootloader/bootloader.bin
Bootloader binary size 0x55f0 bytes. 0xaa10 bytes (66%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/camera_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/camera_main.c.obj 
/home/afzal-khan/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/config -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main -I/home/afzal-khan/esp/esp-idf/components/newlib/platform_include -I/home/afzal-khan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/afzal-khan/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/afzal-khan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/afzal-khan/esp/esp-idf/components/freertos/esp_additions/include -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/afzal-khan/esp/esp-idf/components/heap/include -I/home/afzal-khan/esp/esp-idf/components/log/include -I/home/afzal-khan/esp/esp-idf/components/soc/include -I/home/afzal-khan/esp/esp-idf/components/soc/esp32s3/. -I/home/afzal-khan/esp/esp-idf/components/soc/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/hal/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/hal/include -I/home/afzal-khan/esp/esp-idf/components/hal/platform_port/include -I/home/afzal-khan/esp/esp-idf/components/esp_rom/include -I/home/afzal-khan/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/afzal-khan/esp/esp-idf/components/esp_rom/esp32s3 -I/home/afzal-khan/esp/esp-idf/components/esp_common/include -I/home/afzal-khan/esp/esp-idf/components/esp_system/include -I/home/afzal-khan/esp/esp-idf/components/esp_system/port/soc -I/home/afzal-khan/esp/esp-idf/components/esp_system/port/include/private -I/home/afzal-khan/esp/esp-idf/components/xtensa/include -I/home/afzal-khan/esp/esp-idf/components/xtensa/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/lwip/include -I/home/afzal-khan/esp/esp-idf/components/lwip/include/apps -I/home/afzal-khan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/afzal-khan/esp/esp-idf/components/lwip/lwip/src/include -I/home/afzal-khan/esp/esp-idf/components/lwip/port/esp32/include -I/home/afzal-khan/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/afzal-khan/esp/esp-idf/components/esp_http_server/include -I/home/afzal-khan/esp/esp-idf/components/esp_event/include -I/home/afzal-khan/esp/esp-idf/components/http_parser -I/home/afzal-khan/esp/esp-idf/components/esp-tls -I/home/afzal-khan/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/afzal-khan/esp/esp-idf/components/mbedtls/port/include -I/home/afzal-khan/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/afzal-khan/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/afzal-khan/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/afzal-khan/esp/esp-idf/components/esp_wifi/include -I/home/afzal-khan/esp/esp-idf/components/esp_phy/include -I/home/afzal-khan/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/esp_netif/include -I/home/afzal-khan/esp/esp-idf/components/esp_timer/include -I/home/afzal-khan/esp/esp-idf/components/spi_flash/include -I/home/afzal-khan/esp/esp-idf/components/esp_psram/include -I/home/afzal-khan/esp/esp-idf/components/driver/include -I/home/afzal-khan/esp/esp-idf/components/driver/deprecated -I/home/afzal-khan/esp/esp-idf/components/driver/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/esp_pm/include -I/home/afzal-khan/esp/esp-idf/components/esp_ringbuf/include -I/home/afzal-khan/esp/esp-idf/components/nvs_flash/include -I/home/afzal-khan/esp/esp-idf/components/esp_partition/include -I/home/afzal-khan/esp/esp-idf/components/esp32-camera/driver/include -I/home/afzal-khan/esp/esp-idf/components/esp32-camera/conversions/include -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/managed_components/espressif__mdns/include -I/home/afzal-khan/esp/esp-idf/components/console -I/home/afzal-khan/esp/esp-idf/components/vfs/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton=. -fmacro-prefix-map=/home/afzal-khan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.4-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/camera_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/camera_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/camera_main.c.obj -c /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/camera_main.c
In file included from /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/camera_main.c:12:
/home/afzal-khan/esp/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/camera_main.c: In function 'init_camera':
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/camera_main.c:95:9: error: request for member 'jpeg_quality' in something not a structure or union
   95 |         .jpeg_quality = 10,
      |         ^
ninja: build stopped: subcommand failed.
